# terraview

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
examples/: plan.json
examples/fixed/: main.tf
examples/vulnerable/: main.tf
src/terraview/: cli.py  config.py
src/terraview/analyzers/: llm.py  static.py  traversal.py
src/terraview/findings/: aggregator.py  mitre.py  models.py
src/terraview/graph/: builder.py
src/terraview/output/: markdown.py  sarif.py
src/terraview/parsers/: checkov_parser.py  hcl_parser.py  plan_parser.py
src/terraview/providers/: __init__.py  anthropic.py  base.py  openai.py
tests/: test_aggregator.py  test_graph_builder.py  test_llm.py  test_plan_parser.py  test_sarif.py  test_static.py  test_traversal.py
